quitamos proteccion ya que kong ya se encarga
